Polish manageProgramDialog & components, add styling, fix logic gaps
#760

FYI @jophis, just went through and did some refactoring now that we’ve
added some more functionality in here.

- Top-level _suggestClose and hasChanges methods, to prevent the window
from closing unless changes have been saved. This logic still breaks if
the user makes changes, switches tabs, and saves changes in the other
tab, so we should consider pushing the stateful data to the top-level
and having one global SAVE toolbar.

- Form validation extracted to `_formIsValid()` method

- Changed modifyProgram to a 2-column layout, like manageClients. The
consistency looks much better now.

- Styles are now required from manageProgramDialog’s styl file, as
opposed to being done in main.styl . This is a pattern we should follow
from now on, to avoid acquiring any more tech-debt.

- Added missing key for ColorKeySelection, and compulsory IDs for the
R-Bootstrap tabs

--- a/src/manageProgramClientsView.styl
+++ b/src/manageProgramClientsView.styl
@@ -13,9 +13,14 @@
 			flex 1
 
 	.programClientsContainer
+		display flex
 		overflow auto
 
 		.programClients
+			display flex
+			flex-direction column
+			flex 1
+
 			h3
 				border-bottom 2px solid #eee
 				padding-bottom 10px
@@ -32,11 +37,14 @@
 					float right
 
 			.panel-body
+				padding 0
+				flex 1
 
-				&.noData
+				.noData
 					text-align center
 					padding 15px
 					font-style italic
+
 
 	.clientPickerContainer
 		display flex
