--- a/src/manageProgramDialog.styl
+++ b/src/manageProgramDialog.styl
@@ -8,11 +8,17 @@
 		display flex
 		flex-direction column
 
-	.saveBar
-		padding-top 10px
-
 	.modifyProgramViewContainer
 		display flex
 		justify-content center
 		align-items center
-		padding 15px
+		padding-top 15px
+
+	.saveButtonToolbar
+		display flex
+
+		> button
+			flex 1
+
+	@require modifyProgramView
+	@require manageProgramClientsView
